tests/base/valid/Process_Valid_6.whiley
import * from whiley.lang.*

define out as 123.456

void ::main(System sys,[string] args):
    sys.out.println("Hello World")
